--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "appointment-app",
-  "version": "1.1.0",
+  "name": "test-appointment-website",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "node server.js",
